fix: adjust accordion answer height and enable overflow for better content display

--- a/DOM_Manipulation_Part_2/project-3/css/style.css
+++ b/DOM_Manipulation_Part_2/project-3/css/style.css
@@ -48,6 +48,7 @@ body {
 /* JavaScript Styling Link */
 
 .accordion .content-container.active .answer{
+    overflow: auto;
     height: 150px;
 }
 
